--- a/scss/blocks/_blocks-all.scss
+++ b/scss/blocks/_blocks-all.scss
@@ -5,4 +5,9 @@
 @import "section-manager";
 @import "section-stories.scss";
 @import "section-ready.scss";
-@import "footer"
+@import "footer";
+@import "about-section-about";
+@import "about-section-meet";
+@import "about-section-clients";
+@import "about-section-ready";
+@import "contact-section";
