--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -3,7 +3,6 @@
     padding-bottom: 129px;
     display: flex;
     align-items: center;
-
 }
 
 .header-img {
@@ -56,6 +55,7 @@
     background-color: transparent;
     color: #FFFFFF;
     transition: 0.8s ease-in;
+    text-decoration: none;
 }
 
 .btn:hover {
