--- a/scss/blocks/_contact-section.scss
+++ b/scss/blocks/_contact-section.scss
@@ -104,3 +104,73 @@
     background-color: #004047;
     color: #FFFFFF;
 }
+
+
+@include breakpoint-down (776px) {
+    .contact_container {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        padding-bottom: 112px;
+
+    }
+    
+    .contact_heading {
+        text-align: center;
+        line-height: 56px;
+    }
+
+    .contact_text {
+        text-align: center;
+    }
+
+    .contact_item {
+        margin-top: 8px;
+        display: flex;
+        align-items: center;
+    }
+
+    .name { 
+        margin-top: 64px;
+        padding-bottom: 24px;
+    }
+    
+    .contact_btn {
+        margin-right: auto;
+    }
+}
+
+@include breakpoint-down (577px) {
+    .contact_container {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        padding-bottom: 112px;
+    }
+    
+    .contact_heading {
+        font-size: 40px;
+        line-height: 40px;
+    }
+
+    .contact_text {
+        text-align: center;
+        font-size: 32px;
+        line-height: 48px;
+    }
+
+    .contact_item {
+        margin-top: 8px;
+        display: flex;
+        align-items: center;
+    }
+
+    .name { 
+        margin-top: 64px;
+        padding-bottom: 24px;
+    }
+    
+    .form_line {
+        width: 100%;
+    }
+}
