--- a/scss/blocks/_section-stories.scss
+++ b/scss/blocks/_section-stories.scss
@@ -75,6 +75,7 @@
 
     
     .stories_list {
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -107,6 +108,7 @@
 
 @include breakpoint-down (577px) {
     .stories_list {
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
