--- a/scss/blocks/_section-find.scss
+++ b/scss/blocks/_section-find.scss
@@ -1,9 +1,3 @@
-.find {
-    background-image: url(../../img/dark-disk.svg);
-    background-repeat: no-repeat;  
-    background-position: calc(center, 50% - 780px);
-}
-
 .find-container {
     display: flex;
     justify-content: space-between;
@@ -16,7 +10,7 @@
     font-weight: 700;
     font-size: 100px;
     line-height: 100px;
-    color: #ffff;
+    color: #FFFFFF;
 }
 
 .color {
